Little improvements in colors and margins
- improving color of text in ninjam comboboxes to have more contrast. The old text color was almost white, difficult to read.
- improving the constrast in public rooms borders (using a little darker borders).
- using more margim in tablayout for minimode to have a more clean aspect.
- using more margim in ninjam tracks when using horizontal layout.
- changing the little speaker icons colors to have less contrast. These little icons are used in every tracks and the old black color is too mutch.

--- a/Client/src/resources/jamtaba.css
+++ b/Client/src/resources/jamtaba.css
@@ -809,12 +809,8 @@ BusyDialog > QLabel{
 
 
 JamRoomViewPanel{
-    background-color: none;/*#EAEAEA;*/
-    border: 1px solid rgb(180,180,180);
-    /*border-bottom: 1px solid rgb(167, 167, 167);
-    border-right: 1px solid rgb(180,180,180);*/
-    border-left-color: #C6C6C6;
-    border-top-color:#C6C6C6;
+    background-color: none;
+    border: 1px solid rgba(0, 0, 0, 60);
 
     border-radius: 2px;
     padding: 1px;
@@ -1240,10 +1236,6 @@ NinjamPanel #intervalPanel{
 
 NinjamPanel #panelCombos QLabel{
     color: black;
-}
-
-NinjamPanel #panelCombos QComboBox{
-    color: rgb(220, 220, 220);
 }
 
 NinjamPanel #panelCombos QComboBox::down-arrow
