--- a/Client/src/Common/gui/MainWindow.ui
+++ b/Client/src/Common/gui/MainWindow.ui
@@ -115,7 +115,7 @@
                 <x>0</x>
                 <y>0</y>
                 <width>751</width>
-                <height>297</height>
+                <height>301</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -232,13 +232,13 @@
          </property>
          <property name="minimumSize">
           <size>
-           <width>120</width>
+           <width>140</width>
            <height>0</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
-           <width>160</width>
+           <width>180</width>
            <height>16777215</height>
           </size>
          </property>
@@ -271,13 +271,13 @@
             <item>
              <widget class="QSlider" name="masterFader">
               <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
               <property name="maximum">
-               <number>120</number>
+               <number>140</number>
               </property>
               <property name="singleStep">
                <number>10</number>
@@ -409,7 +409,7 @@
             <x>0</x>
             <y>0</y>
             <width>16</width>
-            <height>306</height>
+            <height>310</height>
            </rect>
           </property>
           <property name="sizePolicy">
