--- a/Client/src/Common/gui/NinjamRoomWindow.ui
+++ b/Client/src/Common/gui/NinjamRoomWindow.ui
@@ -42,57 +42,46 @@
     <number>9</number>
    </property>
    <item>
-    <widget class="QWidget" name="topWidget" native="true">
-     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0">
-      <property name="spacing">
-       <number>0</number>
-      </property>
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>0</number>
-      </property>
-      <item>
-       <widget class="QLabel" name="labelRoomName">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>1</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="accessibleDescription">
-         <string>This is the room where you are</string>
-        </property>
-        <property name="text">
-         <string notr="true">TextLabel</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="licenceButton">
-        <property name="toolTip">
-         <string>read the server licence ...</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="flat">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
+    <layout class="QHBoxLayout" name="topLayout">
+     <property name="spacing">
+      <number>12</number>
+     </property>
+     <property name="leftMargin">
+      <number>6</number>
+     </property>
+     <property name="rightMargin">
+      <number>6</number>
+     </property>
+     <item>
+      <widget class="QLabel" name="labelRoomName">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>1</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="accessibleDescription">
+        <string>This is the room where you are</string>
+       </property>
+       <property name="text">
+        <string notr="true">TextLabel</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="licenceButton">
+       <property name="toolTip">
+        <string>read the server licence ...</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="QWidget" name="content" native="true">
@@ -141,7 +130,7 @@
            <x>0</x>
            <y>0</y>
            <width>733</width>
-           <height>419</height>
+           <height>417</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout">
