Porting to Linux close #257
- Fixing the project VstScanner to compile in Linux (testing in Ubuntu only)
- Creating the LinuxVstPluginChecker.cpp
- Adding the __cdecl DEFINE in the .pro file to avoid the erros when compiling the VST SDK in linux
- Fixing the libs path in Standalone.pro
- Removing portmidi files (we are using RtMidi now)
- Creating the PortAudio related files for Linux
- Compiling minimp3 using gcc (not g++) to avoid mangling problems in Linux
- Using a fixed list of audio buffer sizes. In Linux (using ALSA) we can't ask devices about a buffer sizes list.
- Remembering last used audio device in Linux
- Changing the .css file to remove the rect border in selected tabs
- Fixing details for vst scanning
- Adding default VST paths in Linux
- Creating script to build the Linux installer (a .run file tested in Ubuntu only)

--- a/Client/src/resources/jamtaba.css
+++ b/Client/src/resources/jamtaba.css
@@ -1,6 +1,7 @@
 *{
     font-family: "Verdana";
     font-size: 11px;
+    outline: none; /* Removing rect border in selected tabs (Linux workaround) */
 }
 
 /* Remove the focus rect. The annoying focus appears only in VSt plugin*/
