--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -825,28 +825,25 @@ JamRoomViewPanel{
     background-color: none;
     border: 1px solid rgba(0, 0, 0, 60);
 
-    border-radius: 2px;
-    padding: 0px;
+    border-radius: 3px;
 }
 
 JamRoomViewPanel #panelTop{
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
        stop:0 #EAEAEA,
         stop:1 #CACACA);
-
-    margin: 1px;
-    margin-bottom: 0px;
-
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 }
 
 JamRoomViewPanel #content{
-    background-color: rgb(253, 253, 253);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0 rgb(255, 255, 255),
+            stop:1 rgb(250, 250, 250));
     border: none;
-    margin: 1px;
     border-top: 1px solid #dddddd;
-
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
 }
 
 JamRoomViewPanel #labelName{
