Finishing the transpose code

--- a/src/Standalone/gui/miditoolsdialog.ui
+++ b/src/Standalone/gui/miditoolsdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>231</width>
+    <width>237</width>
     <height>293</height>
    </rect>
   </property>
@@ -176,7 +176,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QSpinBox" name="spinBox">
+         <widget class="QSpinBox" name="spinBoxTranspose">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="MinimumExpanding">
             <horstretch>0</horstretch>
