--- a/src/Standalone/gui/miditoolsdialog.ui
+++ b/src/Standalone/gui/miditoolsdialog.ui
@@ -192,6 +192,9 @@
    </item>
    <item>
     <widget class="QGroupBox" name="groupBoxQuantize">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
        <horstretch>0</horstretch>
