--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -386,9 +386,9 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical, QScrollBar::add-pa
 .QLineEdit[enabled="false"]{
     border-radius: 2px;
     padding: 2px;
-    background: rgb(100, 100, 100, 90);
+    background: rgb(0, 0, 0, 40);
     color: rgb(0, 0, 0);
-    border: 1px solid red;
+    border: none;
 }
 
 /*
