Allowing custom metronome sounds
 - Added text fields to choose primary and secondary metronome sound
 - Added a button in metronome controls to open the metronome preferences
 - Saving and restoring metronome preferences

--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -970,7 +970,7 @@ QPushButton[enabled="false"]{
     border-color: rgba(0, 0, 0, 40);
 }
 
-QPushButton#soloButton, QPushButton#muteButton{
+QPushButton#soloButton, QPushButton#muteButton, QPushButton#preferencesButton{
     font-size: 9px;
     border-color: rgb(110,110,110);
     padding: 2px;
@@ -1277,6 +1277,16 @@ NinjamPanel #metronomeControls QSlider::groove:vertical{
 
 NinjamPanel #soloButton, NinjamPanel #muteButton{
     border: 1px solid rgba(0, 0, 0, 60);
+}
+
+NinjamPanel #preferencesButton
+{
+    background-image: url(':/images/gear-hover.png');
+    background-repeat: none;
+    background-position: center center;
+    padding-left: 0px;
+    padding-right: 0px;
+    max-width: 20px;
 }
 
 NinjamPanel QLabel{
