--- a/src/Common/gui/NinjamPanel.ui
+++ b/src/Common/gui/NinjamPanel.ui
@@ -267,6 +267,19 @@
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QPushButton" name="preferencesButton">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
        </layout>
