Adding a floating and resizable interval progress window

--- a/src/Common/gui/NinjamPanel.ui
+++ b/src/Common/gui/NinjamPanel.ui
@@ -303,6 +303,9 @@
             <property name="text">
              <string/>
             </property>
+            <property name="checkable">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
          </layout>
