--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -1240,6 +1240,11 @@ NinjamRoomWindow TrackGroupView{
 }
 
 
+IntervalProgressWindow{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop: 0.5     rgb(230, 230, 230),
+    stop: 1.0   rgba(190, 190, 190));
+}
 
 
 
