Supporting ogg for metronome audio files
- Creating the OggFileReader class
- Changing the FileReaderFactory to create a reader for ogg suffix
- Changing the default metronome sound file to .ogg
- Removing the old click.wav file from resources

--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -301,5 +301,6 @@
         <file>click.wav</file>
         <file>loading.gif</file>
         <file>logging.ini</file>
+        <file>click.ogg</file>
     </qresource>
 </RCC>
