Load .qm file from file system for debug
 * .qm files is moved to ./translations directory

--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -4,7 +4,7 @@
         <file>jamtaba_orange.css</file>
     </qresource>
     <qresource>
-        <file alias="messages.qm" lang="ja_JP">./tr/ja_JP.qm</file>
+        <file alias="messages.qm" lang="ja_JP">../../translations/ja_JP.qm</file>
     </qresource>
     <qresource prefix="/images">
         <file>check.png</file>
