--- a/src/Common/gui/PreferencesDialog.ui
+++ b/src/Common/gui/PreferencesDialog.ui
@@ -472,7 +472,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>98</width>
+               <width>358</width>
                <height>45</height>
               </rect>
              </property>
@@ -569,6 +569,21 @@
        <string>Metronome</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_3">
+       <property name="spacing">
+        <number>24</number>
+       </property>
+       <item>
+        <widget class="QGroupBox" name="groupBox">
+         <property name="title">
+          <string>Built-in metronomes:</string>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <widget class="QComboBox" name="comboMetronomePairs"/>
+          </item>
+         </layout>
+        </widget>
+       </item>
        <item alignment="Qt::AlignTop">
         <widget class="QGroupBox" name="groupBoxCustomSounds">
          <property name="sizePolicy">
