--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -39,6 +39,12 @@ MidiToolsDialog QGroupBox{
     border: none;
 }
 
+PreferencesDialog QGroupBox#groupBoxBuiltInMetronomes[checked=false],
+PreferencesDialog QGroupBox#groupBoxCustomMetronome[checked=false]
+{
+    color: gray;
+}
+
 #voteButton{
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
     stop:0 rgba(255,255,255, 240),
