Adding Portuguese translation (pt_BR)
- Translating to portuguese

- Unchecking the "translatable" checkbox in some forms properties like 'WindowTitle' when the propertie is not used.

- Fixing some missing parameters in translated strings.

- Remove tr(...) from non translatable strings. For example, I'm considering "JamTaba" a non translatable string.

--- a/src/Common/gui/BusyDialog.ui
+++ b/src/Common/gui/BusyDialog.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string notr="true"/>
   </property>
   <property name="windowOpacity">
    <double>1.000000000000000</double>
