--- a/src/Common/gui/chords/ChordsPanel.ui
+++ b/src/Common/gui/chords/ChordsPanel.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string notr="true"/>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="spacing">
@@ -105,7 +105,7 @@
       <string>transpose up</string>
      </property>
      <property name="text">
-      <string>#</string>
+      <string notr="true">#</string>
      </property>
     </widget>
    </item>
@@ -124,7 +124,7 @@
       <string>transpose down</string>
      </property>
      <property name="text">
-      <string>b</string>
+      <string notr="true">b</string>
      </property>
     </widget>
    </item>
