Adding Portuguese translation (pt_BR)
- Translating to portuguese

- Unchecking the "translatable" checkbox in some forms properties like 'WindowTitle' when the propertie is not used.

- Fixing some missing parameters in translated strings.

- Remove tr(...) from non translatable strings. For example, I'm considering "JamTaba" a non translatable string.

--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -4,7 +4,8 @@
         <file>jamtaba_orange.css</file>
     </qresource>
     <qresource prefix="/tr">
-        <file alias="ja_JP.pm">../../translations/ja_JP.qm</file>
+        <file alias="ja_JP.qm">../../translations/ja_JP.qm</file>
+        <file alias="pt_BR.qm">../../translations/pt_BR.qm</file>
         <file alias="es_CL.qm">../../translations/es_CL.qm</file>
     </qresource>
     <qresource prefix="/images">
