Creating a menu for language selection
 - Inspecting the translations resource folder and creating a menu action for each translation. New translations will appear in the menu automagically :)

--- a/src/Common/gui/MainWindow.ui
+++ b/src/Common/gui/MainWindow.ui
@@ -503,9 +503,15 @@
     <addaction name="separator"/>
     <addaction name="actionFullscreenMode"/>
    </widget>
+   <widget class="QMenu" name="menuLanguage">
+    <property name="title">
+     <string>Language</string>
+    </property>
+   </widget>
    <addaction name="menuPreferences"/>
    <addaction name="menuViewMode"/>
    <addaction name="menuNinjam"/>
+   <addaction name="menuLanguage"/>
    <addaction name="menuHelp"/>
   </widget>
   <action name="actionAudioPreferences">
