--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -4,6 +4,7 @@
         <file>jamtaba_orange.css</file>
     </qresource>
     <qresource prefix="/tr">
+        <file alias="en.qm">../../translations/en.qm</file>
         <file alias="ja_JP.qm">../../translations/ja_JP.qm</file>
         <file alias="pt_BR.qm">../../translations/pt_BR.qm</file>
         <file alias="es_CL.qm">../../translations/es_CL.qm</file>
