--- a/src/Common/gui/MainWindow.ui
+++ b/src/Common/gui/MainWindow.ui
@@ -114,7 +114,7 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>751</width>
+                <width>681</width>
                 <height>301</height>
                </rect>
               </property>
@@ -364,7 +364,7 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QLabel" name="labelSectionTitle">
+           <widget class="QLineEdit" name="labelSectionTitle">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
               <horstretch>1</horstretch>
@@ -372,7 +372,10 @@
              </sizepolicy>
             </property>
             <property name="text">
-             <string>Your controls</string>
+             <string notr="true"/>
+            </property>
+            <property name="placeholderText">
+             <string>type your name</string>
             </property>
            </widget>
           </item>
