Locking (read-only) user name input field when connected in a server
- Showing lock icon when user name field is read-only
- Changing the color of user name text field to gray when locked

--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -48,6 +48,7 @@
         <file>narrow.png</file>
         <file>wide.png</file>
         <file>windows.png</file>
+        <file>lock.png</file>
     </qresource>
     <qresource prefix="/flags">
         <file>flags/ad.png</file>
